Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/lambdaExpression/InvalidExpression1.out
InvalidExpression1.java:14:59: compiler.err.not.stmt
InvalidExpression1.java:15:68: compiler.err.expected: ';'
2 errors
